Handle system (ARC++) text-to-speech voice in TTS settings page.

The ARC++ voice is built-in, so it does not have an extension ID. It also
lacks a default language. Handle voices  without adefault language in the
TTS settings page by adding a drop-down to select a default voice when no
particular language is specified. Handle voices without extension ID by
not making an empty extension ID in a voice something that keeps a match from
occuring in tts_controller_impl::VoiceMatches.

Bug: 850702
Change-Id: Ia06c485ee3e90b7bbb0c13bcae0a30d234e0abd6
Reviewed-on: https://chromium-review.googlesource.com/1092071
Reviewed-by: David Tseng <dtseng@chromium.org>
Reviewed-by: Hector Carmona <hcarmona@chromium.org>
Commit-Queue: Katie Dektar <katie@chromium.org>
Cr-Commit-Position: refs/heads/master@{#566581}
Former-commit-id: 2ad8e3dbd6864896f1087e4e6ae1c7054bf242f7